QS: Locale Tile
Toggle the primary default language

- Bring it to Oreo - @LorDClockaN
- Bring it to Pie - @eyosen
- Adapt qs tile to android 10 style - @rohanpurohit

Change-Id: I3e336eddb360ea1a796727657652ad9301007380
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/packages/SystemUI/res/values/bliss_config.xml
+++ b/packages/SystemUI/res/values/bliss_config.xml
@@ -15,7 +15,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_extra" translatable="false">
-        aod,compass,cpuinfo,dataswitch,gaming,immersive,lte,mono,music,reboot,screenrecord,screenshot,screenstabilization,sleepscreen,sound,soundsearch,vpn,weather
+        aod,compass,cpuinfo,dataswitch,gaming,immersive,lte,locale,mono,music,reboot,screenrecord,screenshot,screenstabilization,sleepscreen,sound,soundsearch,vpn,weather
     </string>
 
     <!-- Burn in protection -->
