Power Menu animations [1/2]
SDB: Bring it back from the Dead & adapt for A12

Signed-off-by: SuperDroidBond <superdroidbond@yahoo.com>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>
Change-Id: I8eb02f03b7e5204383eea40df7eec98ca44546e8

--- a/core/res/res/values/bliss_symbols.xml
+++ b/core/res/res/values/bliss_symbols.xml
@@ -50,4 +50,9 @@
   <java-symbol type="string" name="reboot_to_bootloader_message" />
   <java-symbol type="string" name="reboot_title" />
   <java-symbol type="string" name="reboot_message" />
+
+  <!-- Powermenu animations -->
+  <java-symbol type="style" name="GlobalActionsAnimation" />
+  <java-symbol type="style" name="GlobalActionsAnimationTop" />
+  <java-symbol type="style" name="GlobalActionsAnimationEnter" />
 </resources>
