Initial support for in-display fingerprint sensors
* Initially based upon phh's Mi9 implementation,
  however a lot of changes have been made since.
* All device specific stuff has been moved to
  IFingerprintInscreen HIDL interface and most
  of code has been improved and refactored.

[TheScarastic]: Adapt for Android R Dagger Injection

[poad42] Remove sdk deps ( shamelessly kanged checks from https://github.com/DerpLab/platform_frameworks_base/commit/3307c488cabecf73f620d43b30cea7a2d83be015#diff-ea184c0b7c30c6366b8e3577d0cd14d8)

Change-Id: I52beaf6492b9daa012b5d42b858d552d1e378a2c

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4362,4 +4362,11 @@
     <bool name="config_pdp_reject_enable_retry">false</bool>
     <!-- pdp data reject retry delay in ms -->
     <integer name="config_pdp_reject_retry_delay_ms">-1</integer>
+
+    
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <bool name="config_cleanupUnusedFingerprints">true</bool>
+
+    <!-- Whether to show a custom view for FOD -->
+    <bool name="config_needCustomFODView">false</bool>
 </resources>
