--- a/packages/SystemUI/res/values/bliss_colors.xml
+++ b/packages/SystemUI/res/values/bliss_colors.xml
@@ -31,4 +31,15 @@
     <color name="edge_light_green">#3aa853</color>
     <color name="edge_light_red">#ea4234</color>
     <color name="edge_light_yellow">#fbbc06</color>
+
+    <color name="volume_dialog_background">@android:color/white</color>
+    <color name="volume_background_tint">#f2f2f2</color>
+
+    <color name="ringer_icon_normal">#5c5c5c</color>
+    <color name="ringer_bcg_normal">@color/volume_background_tint</color>
+
+    <color name="ringer_icon_mute">@android:color/white</color>
+
+    <color name="row_icon_dark">@color/ringer_icon_normal</color>
+    <color name="row_icon_white">@android:color/white</color>
 </resources>
