--- a/packages/SystemUI/res/values/bliss_dimens.xml
+++ b/packages/SystemUI/res/values/bliss_dimens.xml
@@ -138,4 +138,11 @@
     <dimen name="opa_line_x_trans_bg">30dp</dimen>
     <dimen name="opa_line_x_trans_ry">15dp</dimen>
     <dimen name="opa_line_y_translation">16dp</dimen>
+
+    <dimen name="custom_volume_dialog_seekbar_width">40dip</dimen>
+    <dimen name="custom_volume_dialog_seekbar_height">220dip</dimen>
+    <dimen name="volume_dialog_row_icon_margintop">-54dp</dimen>
+    <dimen name="volume_dialog_rows_padding_right">0.5dip</dimen>
+    <dimen name="volume_dialog_ringer_spacing">4dip</dimen>
+    <dimen name="volume_dialog_ringer_height">38dip</dimen>
 </resources>
