--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -94,4 +94,11 @@
     <color name="qs_detail_toolbar_background">@*android:color/primary_dark_device_default_settings</color>
     <color name="qs_detail_background">@*android:color/primary_dark_device_default_settings</color>
 
+    <color name="volume_background_tint">#141414</color>
+
+    <color name="ringer_icon_normal">@android:color/white</color>
+    <color name="ringer_bcg_normal">@color/volume_background_tint</color>
+
+    <color name="ringer_icon_mute">@android:color/white</color>
+
 </resources>
