Disable ticker DT2SkipTrack and wake to Ambient on Soli devices
Soli has its own implementation for both things

Override:
 <bool name="config_has_Soli">false</bool>
and set it to true in device tree to skip double tap on music info.

Change-Id: Ib1dc2fb57615123b578c5179c6b14cda1a697755

--- a/core/res/res/values/bliss_config.xml
+++ b/core/res/res/values/bliss_config.xml
@@ -152,4 +152,6 @@
     <!-- Whether key handler sends intent when changing slider position -->
     <string name="config_alertSliderIntent"></string>
 
+    <bool name="config_has_Soli">false</bool>
+
 </resources>
