Add regular / light font config
Change-Id: I1b0612cdc7652e5a1747b61cf2dd35e3533081ba

--- a/core/res/res/values/bliss_symbols.xml
+++ b/core/res/res/values/bliss_symbols.xml
@@ -105,4 +105,8 @@
     <java-symbol type="string" name="alert_slider_mode_silent" />
     <java-symbol type="string" name="alert_slider_mode_dnd" />
 
+    <!-- Light / Regular style fonts -->
+    <java-symbol type="string" name="config_lightFontFamily" />
+    <java-symbol type="string" name="config_regularFontFamily" />
+
 </resources>
