--- a/packages/SystemUI/res/values/bliss_dimens.xml
+++ b/packages/SystemUI/res/values/bliss_dimens.xml
@@ -18,4 +18,5 @@
 
     <!-- Recognizing fingerprint animation -->
     <dimen name="fod_animation_size">280dp</dimen>
+    <dimen name="fod_animation_offset">0dp</dimen>
 </resources>
