--- a/packages/SystemUI/res/values/bliss_strings.xml
+++ b/packages/SystemUI/res/values/bliss_strings.xml
@@ -190,4 +190,8 @@
     <string name="task_helper_app_killed">%1$s force stopped</string>
     <string name="empty_app_killed">App</string>
 
+    <!-- Alert slide extras -->
+    <string name="volume_ringer_priority_only">Priority</string>
+    <string name="volume_ringer_alarms_only">Alarms</string>
+
 </resources>
