--- a/packages/SystemUI/res/layout/quick_settings_header_info.xml
+++ b/packages/SystemUI/res/layout/quick_settings_header_info.xml
@@ -89,6 +89,33 @@
             </LinearLayout>
         </com.android.systemui.qs.QSHeaderInfoLayout>
 
+        <LinearLayout
+                android:id="@+id/system_info_layout"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="4dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical|end"
+                android:clipChildren="false" >
+
+                <ImageView
+                    android:id="@+id/system_info_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/status_bar_icon_size"
+                    android:visibility="gone"
+                    android:paddingEnd="1dp" />
+
+                <TextView
+                    android:id="@+id/system_info_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:singleLine="true"
+                    android:paddingEnd="@dimen/status_bar_clock_end_padding"
+                    android:textAppearance="@style/TextAppearance.StatusBar.Clock"
+                    android:gravity="center_vertical|end"
+                    android:visibility="gone"/>
+        </LinearLayout>
+
         <include layout="@layout/qs_carrier_group"
                  android:id="@+id/carrier_group"
                  android:layout_width="wrap_content"
