--- a/packages/SystemUI/res/values/bliss_config.xml
+++ b/packages/SystemUI/res/values/bliss_config.xml
@@ -15,7 +15,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_extra" translatable="false">
-        aod,compass,adb,cpuinfo,dataswitch,fpsinfo,gaming,immersive,locale,mono,music,reboot,screenrecord,screenshot,screenstabilization,sleepscreen,sound,soundsearch,vpn,weather
+        aod,compass,adb,cpuinfo,dataswitch,fpsinfo,gaming,immersive,locale,mono,music,,powershare,reboot,screenrecord,screenshot,screenstabilization,sleepscreen,sound,soundsearch,vpn,weather
     </string>
 
     <!-- Burn in protection -->
