BatteryService: Implement vooc charging support
* Realme devices support non standard charger type, i.e vooc charger that has its own crazy charge speeds
  luckily vooc charger can be determined upon the value of one node, Let's use that and update user when
  vooc charger is coonected and vooc charging is in progresss, Also guard this via a overlay flag and set
  it to false by default to preserve the default aosp behaviour for non standard chargers if user uses them.

[@dev-harsh1998]: Forward Port to Android R's fuelgauge implementation

Change-Id: If9a616cbdeeaaf658d960d2f92b26e1f928d2fb2
Co-authored-by: Harshit Jain <god@hyper-labs.tech>
Signed-off-by: Ayan Mukherjee <mukherjeeayan725@gmail.com>

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4365,4 +4365,7 @@
 
     <!-- Whether to show a custom view for FOD -->
     <bool name="config_needCustomFODView">false</bool>
+
+    <!-- Whether device has VOOC charging support -->
+    <bool name="config_hasVoocCharger">false</bool>
 </resources>
