--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -4054,4 +4054,7 @@
 
   <!-- Whether to show a custom view for FOD -->
   <java-symbol type="bool" name="config_needCustomFODView" />
+
+  <!-- Whether device has VOOC charging support -->
+  <java-symbol type="bool" name="config_hasVoocCharger" />
 </resources>
