Allow additional padding for center clock
* When the punch hole overlay is filled in, the center clock
  position will be calculated ignoring the punch hole, which
  will cause center clock too left or right.

  Allow additional padding on center clock to make it also
  center on punch hole devices.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>
Change-Id: I29f8f22be83f4978220f538448f66676e52936dc

--- a/packages/SystemUI/res/values/bliss_dimens.xml
+++ b/packages/SystemUI/res/values/bliss_dimens.xml
@@ -43,4 +43,10 @@
     <dimen name="navigation_home_handle_width_medium">110dp</dimen>
     <dimen name="navigation_home_handle_width_long">140dp</dimen>
 
+    <!-- Margin on the left side of the center clock -->
+    <dimen name="status_bar_center_clock_padding_start">0dp</dimen>
+
+    <!-- Margin on the right side of the center clock -->
+    <dimen name="status_bar_center_clock_padding_end">0dp</dimen>
+
 </resources>
