graphics: Override system fonts with user-selected overlays
Only using user-selected fonts for a subset of system apps leads to an
inconsistent visual experience. While we've already applied them to the
system's Material UI themes, many apps have hard-code references to
sans-serif (whether it's through XML styles or Typeface.SANS_SERIF), so
it is also necessary to override Typeface fonts at runtime.

Changing overlays causes OverlayManagerService to schedule
ApplicationInfo updates for affected apps, which forces a configuration
change by incrementing Configuration#assetsSeq.

TODO: figure out why not all apps get consistent configuration updates
until manually relaunching activities

Change-Id: I684a56315808f78f24a14cd6efeda0ea05e25abf
Signed-off-by: SuperDroidBond <superdroidbond@yahoo.com>

--- a/core/res/res/values/bliss_symbols.xml
+++ b/core/res/res/values/bliss_symbols.xml
@@ -36,4 +36,7 @@
   <java-symbol type="string" name="config_alertSliderIntent" />
   <java-symbol type="integer" name="config_alertSliderLocation" />
   <java-symbol type="string" name="config_alertSliderIntent" />
+
+  <!-- For dynamic default font styles -->
+  <java-symbol type="string" name="config_bodyFontFamily" />
 </resources>
