SystemUI: Introduce Battery Landscape | Left Battery Text [1/2]
Inspiration from Ancient ROM, thanks to Kakek for helps...

Change-Id: Ia82521519b73c1741ef3a2c728943dcd46060b85

--- a/packages/SystemUI/res/values/bliss_dimens.xml
+++ b/packages/SystemUI/res/values/bliss_dimens.xml
@@ -26,6 +26,11 @@
     <dimen name="status_bar_battery_bigcircle_icon_height">20.5dp</dimen>
      <!-- Width of the big battery circle icon in the status bar. -->
     <dimen name="status_bar_battery_bigcircle_icon_width">20.5dp</dimen>
+	
+    <!-- Height of the landscape battery icon in the status bar. -->
+    <dimen name="status_bar_battery_icon_height_landscape">12.5dp</dimen>
+    <!-- Width of the landscape battery icon in the status bar. -->
+    <dimen name="status_bar_battery_icon_width_landscape">24dp</dimen>
 
     <!-- Bottom margin size when fingerprint in display is active -->
     <dimen name="keyguard_indication_margin_bottom_fingerprint_in_display">@dimen/keyguard_indication_margin_bottom</dimen>
