policy: Add support for device alert sliders
* Provide support for alert slider hardware.
* Ability to swap order of alert slider within system setting.
* Enable setting config_hasAlertSlider to true and defining
  proc nodes for state path and UEvent match path.

* Contributors:
thecrazyskull
carlosavignano

TODO> SystemUI integration.

Forward ported to Pie by @Sirhc95

Change-Id: I7f546e03685e0e63f6718be8dbd2496701259bc8

--- a/core/res/res/values/bliss_config.xml
+++ b/core/res/res/values/bliss_config.xml
@@ -100,4 +100,7 @@
     <!-- Expected value from fast charging status file  -->
     <string name="config_oemFastChargerStatusValue" translatable="false"></string>
 
+    <!-- Whether device has physical tri state switch -->
+    <bool name="config_hasAlertSlider">false</bool>
+
 </resources>
