--- a/core/res/res/values/bliss_symbols.xml
+++ b/core/res/res/values/bliss_symbols.xml
@@ -98,5 +98,7 @@
     <java-symbol type="string" name="alert_slider_state_path" />
     <java-symbol type="string" name="alert_slider_uevent_match_path" />
     <java-symbol type="bool" name="config_hasAlertSlider" />
+    <java-symbol type="string" name="config_alertSliderIntent" />
+    <java-symbol type="integer" name="config_alertSliderLocation" />
 
 </resources>
