--- a/packages/SystemUI/res/drawable/left_dialog_tri_state_up_bg.xml
+++ b/packages/SystemUI/res/drawable/left_dialog_tri_state_up_bg.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (C) 2019 CypherOS
+    Copyright (C) 2020 Paranoid Android
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
 
-        http://www.apache.org/licenses/LICENSE-2.0
+         http://www.apache.org/licenses/LICENSE-2.0
 
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
@@ -20,11 +21,10 @@
         <shape>
             <solid android:color="#ff1d1d1d" />
             <corners
-                android:topLeftRadius="@dimen/tri_state_down_top_left_radius"
-                android:topRightRadius="@dimen/tri_state_down_top_right_radius"
-                android:bottomLeftRadius="@dimen/tri_state_down_bottom_left_radius"
-                android:bottomRightRadius="@dimen/tri_state_down_bottom_right_radius" />
+                android:topLeftRadius="@dimen/left_tri_state_up_top_left_radius"
+                android:topRightRadius="@dimen/left_tri_state_up_top_right_radius"
+                android:bottomLeftRadius="@dimen/left_tri_state_up_bottom_left_radius"
+                android:bottomRightRadius="@dimen/left_tri_state_up_bottom_right_radius" />
         </shape>
     </item>
 </layer-list>
-
