--- a/packages/SystemUI/res/values/bliss_dimens.xml
+++ b/packages/SystemUI/res/values/bliss_dimens.xml
@@ -5,4 +5,7 @@
 -->
 <resources>
 
+    <!-- Bluetooth dialog -->
+    <dimen name="bluetooth_dialog_active_device_bottom_margin">4dp</dimen>
+
 </resources>
